# stinger

./: .bumpversion.cfg  .cursor  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_NEEDED.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE5_TESTING_REQUIREMENTS.md  README.md  RELEASING.md  VERSION_HISTORY.md  check_ci_readiness.py  cleanup_and_commit.sh  cleanup_phase12.py  demo_hot_reload.py  demo_phase5.py  demo_presets.py  feature_request.md  fix_imports.py  issue12.md  manage_api_keys.py  pr_phase7d_summary.md  pyproject.toml  pytest.ini  quickstart.py  rename_filters_to_guardrails.py  requirements.txt  run_phase12_tests.py  run_test_suites.py  stinger.py  stinger_test_runner.py  test_ai_filters_integration.py  test_api_keys.yaml  (+5 more)
.github/workflows/: ci.yml  publish.yml  release.yml  security-monitoring.yml
configs/: comprehensive.yaml  customer_service_invalid.yaml  customer_service_phase4.yaml  medical_bot_phase4.yaml  minimal.yaml  phase5_openai.yaml
configs/keyword_lists/: harassment.txt  profanity.txt
demos/: README.md  conversation_aware_prompt_injection_demo.py  conversation_aware_prompt_injection_helpers.py  conversation_demo.py  demo_presets.py  global_rate_limiting_demo.py  topic_filter_demo.py  topic_guardrail_demo.py
demos/tech_support/: README.md  config.yaml  demo.py  demo_utils.py  one_liner_demo.py  prompts.txt  simple_demo.py
demos/web_demo/: ACTUAL_STATUS.md  Phase10_Implementation_Summary.md  QUICK_START.md  README.md  README_STABLE.md  SETUP.md  SUPER_DEMO_PLAN_REVISED.md  TEST_PLAN_REVISED.md  consolidate_tests.py  debug_startup.py  demo_validation.py  package-lock.json  package.json  quick_start.py  requirements-test.txt  (+21 more)
docs/: AI_vs_NonAI_Guardrails.md  API_KEY_HANDLING.md  API_REFERENCE.md  CORE_API_CODE_REVIEW.md  CORE_API_CRITICAL_FIX_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXTENSIBILITY_GUIDE.md  EXTENSIBILITY_GUIDE_UPDATE_SUMMARY.md  GETTING_STARTED.md  GUARDRAIL_GUIDE.md  GUARDRAIL_REFERENCE.md  Guardrails_Overview.md  Phase7D2_Completion_Summary.md  Phase7D2_WebDemo_Fix_Plan.md  Phase7D4_Completion_Summary.md  Phase7_Progress_Update.md  PyPI_Name_Reservation_Strategy.md  PyPI_PUBLISHING_GUIDE.md  QA_FIXES_SUMMARY.md  README.md  SETUP_WIZARD_GUIDE.md  STREAMING_ROADMAP.md  Security_Fixes_Summary.md  TESTING_STRATEGY.md  Test_Cleanup_Plan.md  plugin-team-ci-cd-tips.md
examples/: README.md  customer_service_simple.yaml  example_template.py  medical_bot_simple.yaml  pii_detection.yaml  simple_usage.py  update_examples.py
management-console/: .gitignore  DEPLOYMENT_GUIDE.md  Phase11A_Progress.md  Phase11_Implementation_Summary.md  README.md  start_console.sh
placeholders/: README.md  build_placeholders.sh
placeholders/stinger/: README.md  pyproject.toml
placeholders/stinger-guardrails/: README.md  pyproject.toml
plans/: Phase1_Execution_Plan.md  Phase2_Execution_Plan.md  Phase3_Execution_Plan.md  Phase4_Completion_Report.md  Phase4_Execution_Plan.md  Phase4_Test_Plan.md  Phase4b_Hot_Reload_Execution_Plan.md  Phase4b_Hot_Reload_Test_Plan.md  Phase4c_Hot_Reload_Rollback_Issue.md  Phase4c_Hot_Reload_Rollback_Plan.md  Phase5_Execution_Plan.md  Phase5_Test_Plan.md  Phase5a_Execution_Plan.md  Phase5a_GitHub_Issues.md  Phase5a_Test_Plan.md  Phase5b_Configuration_Reorganization_Plan.md  Phase5c_Configuration_Reorganization_Plan.md  Phase5c_Execution_Plan.md  Phase5d_Execution_Plan.md  Phase5e_Execution_Plan.md  Phase5f_API_Simplification_Summary.md  Phase5f_Conversation_Abstraction_Plan.md  Phase5f_Conversation_Abstraction_Plan_Corrected.md  Phase5g_Completion_Report.md  Phase5g_Conversation_Aware_Prompt_Injection_Plan.md  Phase6_Completion_Report.md  Phase6_Implementation_and_Test_Plan.md  Phase6a_Documentation_Review_and_Samples_Plan.md  Phase6a_Publishing_Plan.md  Phase6b_Compliance_Logging_Plan.md  Phase6b_Compliance_Logging_Test_Plan.md  Phase6b_Security_Audit_Trail_Test_Plan.md  Phase6c_Publishing_Plan.md
scripts/: add_test_markers.py  add_test_markers_v2.py  build_package.sh  bumpversion.cfg  categorize_tests.py  cleanup_repo.sh  fix_action_tests.py  fix_async_tests.py  fix_docstring_quotes.py  fix_import_order.py  fix_parentheses.py  fix_remaining_imports.py  fix_simple_guardrail_calls.py  fix_test_imports.py  fix_test_imports_v2.py  fix_url_guardrail_calls.py  local-ci-check.sh  organize_tests_phase9a.py  pre_publish_check.sh  run_phase12_tests.sh  run_test_suites.py  test-all.sh  test-efficacy.sh  test-fast.sh  test_pypi_package.sh  upload_to_pypi.sh  validate_config_structure.py  verify_pypi_release.py
specs/: LLM_Guardrails_Architecture.md  LLM_Guardrails_PRD.md  LLM_Guardrails_PhasePlan.md
stinger/: __init__.py
tests/: README.md  ai_sanity_tests.py  conftest.py  test_ai_filters_integration.py  test_ai_guardrails_integration.py  test_api_key_manager_security.py  test_audit_async_buffering.py  test_audit_comprehensive.py  test_audit_export.py  test_audit_query_tools.py  test_audit_trail_basic.py  test_audit_trail_integration.py  test_classic_filter_pipeline.py  test_classic_guardrail_pipeline.py  test_conversation.py  test_conversation_api_simplification.py  test_conversation_aware_prompt_injection.py  test_conversation_integration.py  test_error_handling.py  test_global_rate_limiting.py  test_global_rate_limiting_simple.py  test_guardrail_factory_and_api_filters.py  test_hot_reload.py  test_hot_reload_integration.py  test_hot_reload_manual.py  test_input_validation.py  test_integration.py  test_integration_filters.py  test_integration_guardrails.py  test_keyword_block_filter.py  test_keyword_block_guardrail.py  test_keyword_list_filter.py  test_keyword_list_guardrail.py  test_length_filter.py  test_length_guardrail.py  test_openai_content_moderation.py  test_openai_prompt_injection.py  test_performance_validation.py  test_phase2.py  test_phase5.py  (+18 more)
web_demo/: test_demo_e2e.py
(+396 files in other folders)
