[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stinger"
version = "0.1.0"
description = "A reusable framework for safeguarding LLM applications with guardrails."
authors = [
    { name="Steve", email="your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "jsonschema",
    "openai",
    # Add other dependencies from requirements.txt as needed
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stinger*"]

[project.scripts]
stinger = "stinger.cli:main" 