[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stinger-guardrails-alpha"
version = "0.1.0a5"
description = "AI Guardrails Framework - Comprehensive LLM safety toolkit (Alpha)"
authors = [
    { name = "Steve", email = "steve@example.com" }
]
maintainers = [
    { name = "Steve", email = "steve@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "ai",
    "llm",
    "guardrails",
    "safety",
    "security",
    "content-moderation",
    "prompt-injection",
    "pii-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

# Core dependencies only - minimal for basic functionality
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/virtualsteve-star/stinger"
Documentation = "https://github.com/virtualsteve-star/stinger#readme"
Repository = "https://github.com/virtualsteve-star/stinger"
Issues = "https://github.com/virtualsteve-star/stinger/issues"

[project.optional-dependencies]
# AI features require OpenAI
ai = [
    "openai>=1.0.0",
]

# API service dependencies
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "twine>=4.0",
    "build>=0.10",
]

# Web demo dependencies
web-demo = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "watchdog>=3.0.0",
]

# All features
all = [
    "stinger-guardrails-alpha[ai]",
    "stinger-guardrails-alpha[api]",
    "stinger-guardrails-alpha[web-demo]",
]

[project.scripts]
stinger = "stinger.cli:main"
stinger-api = "stinger.api.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["stinger*"]

[tool.setuptools.package-data]
stinger = [
    "**/*.yaml",
    "**/*.yml",
    "**/*.txt",
    "**/*.md",
    "guardrails/configs/*.yaml",
    "scenarios/**/*.yaml",
    "scenarios/**/*.jsonl",
    "data/**/*",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

# Package metadata for better PyPI presentation
[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }