[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stinger"
version = "0.0.1"
description = "Placeholder for Stinger AI Guardrails Framework - Please install stinger-guardrails instead"
authors = [
    { name = "Steve", email = "steve@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/virtualsteve-star/stinger"
Repository = "https://github.com/virtualsteve-star/stinger"
"Install Package" = "https://pypi.org/project/stinger-guardrails/"